--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20200217.2</span> <br>
+					Version: <span id="currentappversion">20200221.2</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master"target="_blank">Check the master branch on Github</a>
 				</p>
 				<p>
@@ -96,27 +96,28 @@
 	</div>
 </div>
 
-<div class="row d-flex justify-content-center my-4">
-	<div id="alertnotification" class="alert alert-danger alert-dismissible fade show" role="alert" style="display:none; position: absolute; z-index: 1;">
-		<div class="row">
-			<div class="col-lg-2 text-center py-1 px-4">
-				<i class="far fa-exclamation-triangle fa-4x pulsate" style="color: orange; font-size: 48px;"></i>
-			</div>
-			<div class="col-lg-10 py-1 px-4">
-				This notification bar will now only appear when a new version is released! AND you can make it disappear until the next version allowing you to have a screen that looks cleaner :)<br><br><br>
-				You can now have the history completely reset every X days/weeks/month on the Nth day.<br>
-				Find it in the <i class="fas fa-info-circle" style="color:white"></i> panel.
-			</div>
-		</div>
-		<button type="button" class="close" onclick="notificationClosed('click');" data-dismiss="alert" aria-label="Close">
-			<span aria-hidden="true">&times;</span>
-		</button>
-	</div>
-</div>
+
 
 
 <div class="container-fluid h-100">
-	<div class="row d-flex">
+	<div class="row d-flex justify-content-center">
+		<div id="alertnotification" class="alert alert-danger alert-dismissible fade show my-4" role="alert" style="display:none; position: absolute; z-index: 1;">
+			<div class="row">
+				<div class="col-lg-2 text-center py-1 px-4 my-auto">
+					<i class="far fa-exclamation-triangle fa-4x pulsate" style="color: orange; font-size: 60px;"></i>
+				</div>
+				<div class="col-lg-10 py-1 px-4">
+					This notification bar will now only appear when a new version is released! AND you can make it disappear until the next version allowing you to have a screen that looks cleaner :)<br><br><br>
+					You can now have the history completely reset every X days/weeks/month on the Nth day.<br>
+					Find it in the <i class="fas fa-info-circle" style="color:white"></i> panel.
+				</div>
+			</div>
+			<button type="button" class="close" onclick="notificationClosed('click');" data-dismiss="alert" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			</button>
+		</div>
+	</div>
+	<div class="row bg-danger my-auto">
 		<div class="col col-lg-2 bg-light"></div>
 		<div class="col col-lg-4 py-3 rounded-right bg-light">
 			<form>
@@ -216,16 +217,16 @@
 		<div class="col col-sm-2"></div>
 	</div>
 	
-    <div class="row d-flex align-items-center fixed-bottom px-3 py-1">
-		<div class="col">
-			<p class="mx-2">Senne Janssens (C) 2020</p>
+    <div class="row fixed-bottom px-3 py-1">
+		<div class="col d-flex h-100 align-self-center">
+			<span class="mx-2">Senne Janssens (C) 2020</span>
 		</div>
 		<div class="col d-flex justify-content-end">
-			<button type="button" class="btn btn-dark py-2 px-4 my-3 mx-3" style="font-size: 1.2rem;" data-toggle="modal" data-target="#modalsettings">
+			<button type="button" class="btn btn-dark py-2 px-4 my-3 mx-3" style="font-size: 1.2rem;" data-toggle="modal" data-target="#modalinfo">
 				<i class="fas fa-info pulsate"></i>
 			</button>
 			<button type="button" class="btn btn-dark py-2 px-3 my-3 mx-3" style="font-size: 1.2rem;" data-toggle="modal" data-target="#modalsettings">
-				<i class="fas fa-cog pulsate"></i>
+				<i class="fas fa-cog"></i>
 			</button>
 		</div>
 	</div>
