--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 	<meta name="robots" content="index">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160200625-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-160200625-1');
+	</script>
 	<!-- Font Awsome -->
 	<link href="css/all.min.css" rel="stylesheet">
 	<!-- Custom Styles -->
