--- a/index.html
+++ b/index.html
@@ -33,18 +33,33 @@
 </head>
 <body onload="reset(); add_time(7.6);">
 <!-- Modal HTML -->
-<div id="modalsettings" class="modal fade">
+<div id="modalabout" class="modal fade">
 	<div class="modal-dialog modal-lg">
 		<div class="modal-content px-2">
 			<div class="modal-header">
-				<h2>Info</h2>
+				<h2>About</h2>
 			</div>
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
 					Version: <span id="currentappversion">20200317.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master"target="_blank">Check the master branch on Github</a>
-				</p>
+				</p>	
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div id="modalsettings" class="modal fade">
+	<div class="modal-dialog modal-lg">
+		<div class="modal-content px-2">
+			<div class="modal-header">
+				<h2>Settings</h2>
+			</div>
+			<div class="modal-body">
 				<p>
 					If you delete your browser data the history will reset. You can export and import your data.<br>
 					<a class="modalbutton floatreset" id="exportHistory" onclick="exportHistory()">Export History</a>
@@ -81,7 +96,7 @@
 							<div class="col-sm">
 								<div class="custom-control custom-radio">
 									<input type="radio" id="historydeleteoptionperiod" name="historydeleteoption" class="custom-control-input" value="period" onchange="showHistorydeleteoptionContent()">
-									<label class="custom-control-label" for="historydeleteoptionperiod" data-toggle="tooltip" data-placement="right" title="This will delete the entire history on the day that's displayed next to 'Reset date'.">Reset history on day</label>
+									<label class="custom-control-label" for="historydeleteoptionperiod" data-toggle="tooltip" data-placement="right" title="This will delete the entire history on the day that's displayed next to 'Reset date'.">Reset history on specific day</label>
 								</div>
 							</div>
 						</div>
@@ -99,7 +114,7 @@
 					<div id="historydeleteoptionperiodscontent" style="display: none;">
 						<div class="form-group">
 							<div class="input-group">
-								<label class="col-form-label" for="historyresetday">Day </label>
+								<label class="col-form-label" for="historyresetday">Reset on day </label>
 								<input type="number" name="historyresetday" id="historyresetday" class="form-control col-sm-2 mx-1" min="1" max="31" onchange="maxValuesDeleteOption()">
 								<label class="col-form-label" for="historyresetperiod"> of every </label>
 								<input type="number" name="historyresetperiod" id="historyresetperiod" class="form-control col-sm-2 mx-1" min="1" onchange="maxValuesDeleteOption()">
@@ -128,6 +143,45 @@
 	</div>
 </div>
 
+<div id="modalinfo" class="modal fade">
+	<div class="modal-dialog modal-lg">
+		<div class="modal-content px-2">
+			<div class="modal-header">
+				<h2>Info</h2>
+			</div>
+			<div class="modal-body">
+				<p>
+					Here I'm posting good and useful applications for any type of device that are (mostly) free.<br>
+					I'm using these myself on my computer, smartphone or somewhere else.<br>
+					If something does cost money, in most cases, it's well spent :)<br><br>
+				</p>			
+				<p>
+					<h4>Rambox</h4>
+					Rambox is an application that allows you to group multiple other applications into 1.<br>
+					You can for example have 3 outlook inboxes and 2 google calendars opened up in the same application!<br>
+					Furthermore, the amount of services, as they call it, you can add are unlimited. And if something isn't premade you can just <a href="https://github.com/ramboxapp/community-edition/wiki/Add-a-Custom-Service" target="_blank" >add a custom service</a>.<br>
+					<br>
+					<a class="btn btn-success btn-sm" href="https://rambox.pro/" target="_blank" role="button">Rambox website</a>
+				</p>		
+				<p>
+					<h4>Tasker</h4>
+					Tasker makes your Android smartphone smarter.<br>
+					It enables you to automate certain tasks wether it'd be settings or SMS related, tasker can make your life easier.<br>
+					At the moment of writing it costs €3,59, but for me it's certainly worth it.<br>
+					Some of the things I'm able to do are setting my phone to silent when I'm at the office, reading my texts out loud when I'm at home or in the car, automatically setting my alarm in the morning (different ones when I work from home or not), remind me of birthdays and send random birthday texts by the push of a button, have my phone go out of vibrating mode make lots of noise when I lost it somewhere and it receives a certain text, ...<br>
+					You see the possibilities are really endless!<br>
+					<br>
+					<a class="btn btn-success btn-sm" href="https://play.google.com/store/apps/details?id=net.dinglisch.android.taskerm" target="_blank" role="button">Tasker in the Google playstore</a>
+				</p>
+				
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+			</div>
+		</div>
+	</div>
+</div>
+
 <div class="container-fluid h-100">
 	<div class="row d-flex justify-content-center">
 		<div id="alertnotification" class="alert alert-danger alert-dismissible fade show my-4" role="alert" style="display: none; position: absolute; z-index: 1;">
@@ -136,9 +190,9 @@
 					<i class="far fa-exclamation-triangle fa-4x pulsate" style="color: orange; font-size: 60px;"></i>
 				</div>
 				<div class="col-lg-10 py-1 px-4">
-					This notification bar will now only appear when a new version is released! AND you can make it disappear until the next version allowing you to have a screen that looks cleaner :)<br><br><br>
-					You can now have the history completely reset every X days/weeks/month on the Nth day.<br>
-					Find it in the <i class="fas fa-info-circle" style="color:white"></i> panel.
+					As you can see the UI got an overhaul.<br>
+					The UI has been coded with Bootstrap 4 resulting in a more standardized way of displaying stuff.<br>
+					This does make it for me personally a little harder to maintain as I didn't write these definitions myself. But hey... It's standerdized!
 				</div>
 			</div>
 			<button type="button" class="close" onclick="notificationClosed('click');" data-dismiss="alert" aria-label="Close">
@@ -243,25 +297,43 @@
 			<div class="col-sm-4 align-self-center">	
 				<div class="row">
 					<div class="col col-sm-1 d-none d-lg-block"></div>
-					<div class="col">
-						<button type="button" class="btn btn-lg btn-success m-3" id="add_time_76()" onclick="add_time(7.6)"><i class="fal fa-plus"></i> 7,6h</button>
+					<div class="col my-3 ml-sm-1">
+						<!--
+						<button type="button" class="btn btn-lg btn-success m-3" onclick="add_time(7.6)"><i class="fal fa-plus"></i> 7,6h</button>
 						<button type="button" class="btn btn-lg btn-success m-3" onclick="add_time(8)"><i class="fal fa-plus"></i> 8h</button>
 						<button type="button" class="btn btn-lg btn-success m-3" onclick="end_time()">End time now</button>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col col-sm-1 d-none d-lg-block"></div>
-					<div class="col">
-						Break<br>
-						<button type="button" class="btn btn-lg btn-primary m-3" id="add_time_76()" onclick="reset_break()"><i class="fal fa-redo"></i></button>
-						<button type="button" class="btn btn-lg btn-primary m-3" onclick="add_time(8)"><i class="add_break(0.096666666666666666666666666666666666666666666666666666666666666666666666666666666666666666)"></i> 5min</button>
-						<button type="button" class="btn btn-lg btn-primary m-3" onclick="add_break(0.5)"><i class="fal fa-plus"></i> 30min</button>
+						-->
+						<div class="btn-group" role="group">
+							<button type="button" class="btn btn-lg btn-success px-4 py-3" onclick="add_time(7.6)" style="border-radius: 1.5rem 0 0 1.5rem !important;"><i class="fal fa-plus"></i> 7,6h</button>
+							<button type="button" class="btn btn-lg btn-success px-4 py-3" onclick="add_time(8)" style="border-radius: 0 !important;"><i class="fal fa-plus"></i> 8h</button>
+							<button type="button" class="btn btn-lg btn-success px-4 py-3" onclick="end_time()" style="border-radius: 0 1.5rem 1.5rem 0 !important;">End time now</button>
+						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col col-sm-1 d-none d-lg-block"></div>
 					<div class="col my-3">
+						<!--
+						<button type="button" class="btn btn-lg btn-primary m-3" onclick="reset_break()"><i class="fal fa-redo"></i></button>
+						<button type="button" class="btn btn-lg btn-primary m-3" onclick="add_time(8)"><i class="add_break(0.096666666666666666666666666666666666666666666666666666666666666666666666666666666666666666)"></i> 5min</button>
+						<button type="button" class="btn btn-lg btn-primary m-3" onclick="add_break(0.5)"><i class="fal fa-plus"></i> 30min</button>
+						-->
+						<div class="btn-group" role="group" data-toggle="tooltip" data-placement="right" title="This is to add break time.">
+							<button type="button" class="btn btn-lg btn-primary px-4 py-3" onclick="reset_break()" style="border-radius: 1.5rem 0 0 1.5rem !important;"><i class="fal fa-redo"></i></button>
+							<button type="button" class="btn btn-lg btn-primary px-4 py-3" onclick="add_time(8)" style="border-radius: 0 !important;"><i class="add_break(0.096666666666666666666666666666666666666666666666666666666666666666666666666666666666666666)"></i> 5min</button>
+							<button type="button" class="btn btn-lg btn-primary px-4 py-3" onclick="add_break(0.5)" style="border-radius: 0 1.5rem 1.5rem 0 !important;"><i class="fal fa-plus"></i> 30min</button>
+						</div>						
+					</div>
+				</div>
+				<div class="row">
+					<div class="col col-sm-1 d-none d-lg-block"></div>
+					<div class="col my-3">
+						<!--
 						<button type="button" class="btn btn-lg btn-danger m-3" onclick="reset()"><i class="fal fa-redo"></i></button>
+						-->
+						<div class="btn-group" role="group">
+							<button type="button" class="btn btn-lg btn-danger px-4 py-3" onclick="reset()"><i class="fal fa-redo"></i></button>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -270,16 +342,15 @@
 	</div>
 	
     <div class="row fixed-bottom px-3 py-1">
-		<div class="col d-flex h-100 align-self-center">
-			<span class="mx-2">Senne Janssens (C) 2020</span>
+		<div class="col d-flex align-self-center">
+			<span class="mx-2">Senne Janssens &#169; 2020</span>
 		</div>
 		<div class="col d-flex justify-content-end">
-			<button type="button" class="btn btn-dark py-2 px-4 my-3 mx-3" style="font-size: 1.2rem;" data-toggle="modal" data-target="#modalinfo">
-				<i class="fas fa-info pulsate"></i>
-			</button>
-			<button type="button" class="btn btn-dark py-2 px-3 my-3 mx-3" style="font-size: 1.2rem;" data-toggle="modal" data-target="#modalsettings">
-				<i class="fas fa-cog"></i>
-			</button>
+			<div class="btn-group align-self-center" role="group">
+				<button type="button" class="btn btn-outline-secondary py-1 px-4" style="height: 50%; font-size: 1.2rem; border-radius: 1.5rem 0 0 1.5rem !important;" data-toggle="modal" data-target="#modalabout"><i class="fas fa-info"></i></button>
+				<button type="button" class="btn btn-outline-secondary py-1 px-4" style="height: 50%; font-size: 1.2rem; border-radius: 0 !important;" data-toggle="modal" data-target="#modalinfo"><i class="fas fa-lightbulb pulsate"></i></button>
+				<button type="button" class="btn btn-outline-secondary py-1 px-4" style="height: 50%; font-size: 1.2rem; border-radius: 0 1.5rem 1.5rem 0 !important;" data-toggle="modal" data-target="#modalsettings"><i class="fas fa-cog"></i></button>
+			</div>			
 		</div>
 	</div>
 </div>
