--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 				</p>			
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+				<button type="button" class="btn btn-danger" id="settingsmodalclosebutton" data-dismiss="modal">Close</button>
 			</div>
 		</div>
 	</div>
