fix scrollbar for history

--- a/index.html
+++ b/index.html
@@ -283,10 +283,10 @@
 						<div class="input-group justify-content-end my-3">
 							<label class="col-form-label" for="overtimetotal" data-toggle="tooltip" data-placement="left" title="Here you can find howmuch overtime you've built up / used during the period you defined in the 'Info' box. This value doesn't include today yet.">Total overtime</label>
 							<div class="col-sm-3">
-								<input name="overtimetotal" id="overtimetotal" type="text" class="form-control mx-1" readonly>
+								<input name="overtimetotal" id="overtimetotal" type="text" class="font-weight-bold form-control mx-1" readonly>
 							</div>
 						</div>
-						<div id="historycontainer" class="float-right my-3 mr-2">
+						<div id="historycontainer" class="ml-auto my-3 mr-2">
 							<div id="history"></div>
 						</div>
 						
