--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 									
 									<div class="input-group my-3">
 										<label class="col-form-label" for="resetdate" id="resetdatelabel">Reset date: </label>
-										<input type="text" name="resetdate" id="resetdate" class="form-control col-sm-5 mx-1" size="20" readonly>
+										<input type="text" name="resetdate" id="resetdate" class="form-control col-sm-5 mx-1" size="20" disabled>
 									</div>
 								</div>
 							</div>
@@ -254,8 +254,8 @@
 						<div class="input-group justify-content-end my-3">
 							<label class="col-form-label" for="totalnobreak" data-toggle="tooltip" data-placement="left" title="These hours are your actual working hours.">Total hours (no break)</label>
 							<div class="col-sm-3">
-								<input name="totalnobreak" id="totalnobreak" type="time" class="form-control mx-1" value="" readonly>
-								<input name="totalnobreakdec" id="totalnobreakdec" type="text" class="form-control mx-1 mt-1" readonly>
+								<input name="totalnobreak" id="totalnobreak" type="time" class="form-control mx-1" value="" disabled>
+								<input name="totalnobreakdec" id="totalnobreakdec" type="text" class="form-control mx-1 mt-1" disabled>
 							</div>
 						</div>
 						<div class="input-group justify-content-end my-3">
@@ -269,21 +269,21 @@
 								</select>
 							</div>
 							<div class="col-sm-3">
-								<input name="overtime" id="overtime" type="text" class="form-control mx-1" readonly>
-								<input name="overtimedec" id="overtimedec" type="text" class="form-control mx-1 mt-1" readonly>
+								<input name="overtime" id="overtime" type="text" class="form-control mx-1" disabled>
+								<input name="overtimedec" id="overtimedec" type="text" class="form-control mx-1 mt-1" disabled>
 							</div>
 						</div>
 						<div class="input-group justify-content-end my-3">
 							<label class="col-form-label" for="total" data-toggle="tooltip" data-placement="left" title="These hours are howmuch time you spent being at your workplace.">Total hours</label>
 							<div class="col-sm-3">
-								<input name="total" id="total" type="time" class="form-control mx-1" readonly>
-								<input name="totaldec" id="totaldec" type="text" class="form-control mx-1 mt-1" readonly>
+								<input name="total" id="total" type="time" class="form-control mx-1" disabled>
+								<input name="totaldec" id="totaldec" type="text" class="form-control mx-1 mt-1" disabled>
 							</div>
 						</div>
 						<div class="input-group justify-content-end my-3">
 							<label class="col-form-label" for="overtimetotal" data-toggle="tooltip" data-placement="left" title="Here you can find howmuch overtime you've built up / used during the period you defined in the 'Info' box. This value doesn't include today yet.">Total overtime</label>
 							<div class="col-sm-3">
-								<input name="overtimetotal" id="overtimetotal" type="text" class="font-weight-bold form-control mx-1" readonly>
+								<input name="overtimetotal" id="overtimetotal" type="text" class="font-weight-bold form-control mx-1" disabled>
 							</div>
 						</div>
 						<div id="historycontainer" class="ml-auto my-3 mr-2">
