hourschedule dropdown layout

--- a/index.html
+++ b/index.html
@@ -263,16 +263,21 @@
 							</label>
 							<div class="col-sm-3">
 								<select name="hourschedule" id="hourschedule" class="form-control mb-1 mb-md-0" onchange="calculateTotal();" data-toggle="tooltip" data-placement="left" title="This is calculated per day. A day in which the application isn't openend is a day not being saved. For example: if you work 2/5 in 2 full days put this to 7,6 or 8. If you work 2/5 @ 3h per day put it at 3,04.">
-									<option value="3.04">3,04h (part-time 2/5, 38h week)</option>
-									<option value="3.2">3,2h (part-time 2/5, 40h week)</option>
-									<option value="3.8">3,8h (half-time, 38h week)</option>
-									<option value="4">4h (half-time, 40h week)</option>
-									<option value="4.56">4,56h (part-time 3/5, 38h week)</option>
-									<option value="4.8">4,8h (part-time 3/5, 40h week)</option>
-									<option value="6.08">6,08h (part-time 4/5, 38h week)</option>
-									<option value="6.4">6,4h (part-time 4/5, 40h week)</option>
-									<option value="7.6">7,6h (full-time, 38h week)</option>
-									<option value="8">8h (full-time, 40h week)</option>
+									<option value="3.04">3,04h 	&emsp;&emsp;(part-time 2/5, 38h week)</option>
+									<option value="3.2">3,2h 	&ensp;&emsp;&emsp;(part-time 2/5, 40h week)</option>
+									<option value="3.8">3,8h 	&ensp;&emsp;&emsp;(half-time, 38h week)</option>
+									<option value="4">4h 		&nbsp;&emsp;&emsp;&emsp;(half-time, 40h week)</option>
+									<option value="4.56">4,56h 	&emsp;&emsp;(part-time 3/5, 38h week)</option>
+									<option value="4.8">4,8h 	&ensp;&emsp;&emsp;(part-time 3/5, 40h week)</option>
+									<option value="6.08">6,08h 	&emsp;&emsp;(part-time 4/5, 38h week)</option>
+									<option value="6.4">6,4h 	&ensp;&emsp;&emsp;(part-time 4/5, 40h week)</option>
+									<option value="7.6">7,6h 	&ensp;&emsp;&emsp;(full-time, 38h week)</option>
+									<option value="8">8h 		&nbsp;&emsp;&emsp;&emsp;(full-time, 40h week)</option>
+									<!--
+										&nbsp; (adds a single space)
+										&ensp; (it is about the width of two normal spaces)
+										&emsp; (it is roughly four normal spaces)
+									-->
 								</select>
 							</div>
 							<div class="col-sm-3">
